Add MessageSender, add Message Forwarder and Transformer examples

--- a/FileToKafka/appsettings.json
+++ b/FileToKafka/appsettings.json
@@ -2,7 +2,8 @@
   "Adapters": {
     "File": {
       "FileSender": {
-        "TopicName": "test-topic-name-1"
+        "TopicName": "file-transfer-topic",
+        "ChunkSizeBytes": 102400
       },
       "DirectoryWatcher": {
         "Directory": "D:\\DotnetStreams\\ToKafka\\",
