--- a/MessageForwarder/appsettings.json
+++ b/MessageForwarder/appsettings.json
@@ -1,11 +1,12 @@
 {
   "Adapters": {
-    "File": {
-      "FileReceiver": {
+    "Messaging": {
+      "MessageReceiver": {
         "TopicName": "file-transfer-topic",
-        "ReceiveTimeout": 5000,
-        "TempDirectory": "D:\\DotnetStreams\\Temp\\",
-        "ReceiveDirectory": "D:\\DotnetStreams\\FromKafka\\"
+        "ReceiveTimeout": 5000
+      },
+      "MessageSender": {
+        "TopicName": "files-sent-topic"
       }
     },
     "Kafka": {
@@ -18,7 +19,7 @@
         "SslCaLocation": ""
       },
       "Consumer": {
-        "GroupId": "example-file-from-kafka",
+        "GroupId": "example-message-transformer",
         "EnableAutoCommit": true,
         "EnableAutoOffsetStore": true,
         "AutoCommitIntervalMs": 1000,
@@ -26,6 +27,10 @@
         "AutoOffsetReset": "Earliest",
         "ConsumeResultFields": "",
         "EnablePartitionEof": false
+      },
+      "Producer": {
+        "EnableDeliveryReports": true,
+        "DeliveryReportFields": "all"
       },
       "AdminClient": {
       }
@@ -49,7 +54,7 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
-      "Application": "DotnetStreams.FileFromKafka"
+      "Application": "DotnetStreams.MessageTransformer"
     },
     "AllowedHosts": "*"
   }
