--- a/DotnetStreams/DotnetStreams.csproj
+++ b/DotnetStreams/DotnetStreams.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="1.3.0" />
+    <PackageReference Include="CsvHelper" Version="13.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0" />
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
