--- a/CSVToKafka/appsettings.json
+++ b/CSVToKafka/appsettings.json
@@ -6,6 +6,7 @@
         "FileFilter": "*.csv"
       },
       "CSVLoader": {
+        "HasHeaderRecord": false
       }
     },
     "Messaging": {
