--- a/CSVToKafka/appsettings.json
+++ b/CSVToKafka/appsettings.json
@@ -25,7 +25,8 @@
       },
       "Producer": {
         "EnableDeliveryReports": true,
-        "DeliveryReportFields": "all"
+        "DeliveryReportFields": "all",
+        "EnableIdempotence": true
       },
       "AdminClient": {
       }
@@ -49,7 +50,7 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
-      "Application": "DotnetStreams.FileToKafka"
+      "Application": "DotnetStreams.CSVToKafka"
     },
     "AllowedHosts": "*"
   }
