--- a/FileToKafka/appsettings.json
+++ b/FileToKafka/appsettings.json
@@ -21,7 +21,8 @@
       },
       "Producer": {
         "EnableDeliveryReports": true,
-        "DeliveryReportFields": "all"
+        "DeliveryReportFields": "all",
+        "EnableIdempotence": true
       },
       "AdminClient": {
       }
